--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "test"
   },
   "dependencies": {
-    "node-uuid": "^1.4.7"
+    "dompurify": "^0.8.4",
+    "jsdom": "^9.9.1",
+    "node-uuid": "^1.4.7",
+    "parse-link-header": "^0.4.1"
   },
   "devDependencies": {
     "eslint": "^3.7.1",
