--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "dompurify": "^0.8.4",
     "jsdom": "^9.9.1",
+    "jsonld": "^0.4.11",
+    "jsonld-rdfa-parser": "^1.5.1",
     "node-uuid": "^1.4.7",
     "parse-link-header": "^0.4.1"
   },
