--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "node-fetch": "^1.6.3",
     "node-uuid": "^1.4.7",
     "parse-link-header": "^0.4.1",
+    "typescript": "^2.5.3",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@types/node": "^8.0.46",
     "eslint": "^3.7.1",
     "eslint-config-standard": "^6.2.0",
     "eslint-plugin-promise": "^3.0.0",
