--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/dompurify": "0.0.31",
+    "@types/parse-link-header": "^1.0.0",
     "accepts": "^1.3.3",
     "dompurify": "^0.8.4",
     "jsdom": "^9.9.1",
