--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   },
   "dependencies": {
     "@types/dompurify": "0.0.31",
+    "@types/lodash": "^4.14.85",
     "@types/parse-link-header": "^1.0.0",
     "accepts": "^1.3.3",
     "dompurify": "^0.8.4",
     "jsdom": "^9.9.1",
     "jsonld": "^0.4.11",
     "jsonld-rdfa-parser": "^1.5.1",
+    "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "node-fetch": "^1.6.3",
     "node-uuid": "^1.4.7",
     "parse-link-header": "^0.4.1",
+    "portfinder": "^1.0.13",
     "typescript": "^2.5.3",
     "uuid": "^3.1.0"
   },
