--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@types/dompurify": "0.0.31",
     "@types/lodash": "^4.14.85",
+    "@types/morgan": "^1.7.35",
     "@types/parse-link-header": "^1.0.0",
+    "@types/winston": "^2.3.7",
     "accepts": "^1.3.3",
     "dompurify": "^0.8.4",
     "jsdom": "^9.9.1",
@@ -17,12 +19,14 @@
     "jsonld-rdfa-parser": "^1.5.1",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
+    "morgan": "^1.9.0",
     "node-fetch": "^1.6.3",
     "node-uuid": "^1.4.7",
     "parse-link-header": "^0.4.1",
     "portfinder": "^1.0.13",
     "typescript": "^2.5.3",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.46",
