use tsc-watch in npm run start-dev

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.1",
     "ts-node": "^3.3.0",
+    "tsc-watch": "^1.0.22",
     "typescript-eslint-parser": "^8.0.1"
   },
   "config": {
@@ -46,9 +47,10 @@
     "lint": "eslint --fix 'src/**/*.ts' 'test/**/*.ts' 'bin/**/*.ts'",
     "test": "ts-node --harmony test",
     "start": "node ./dist/bin/server",
-    "start-dev": "ts-node --harmony bin/server",
+    "start-dev": "tsc-watch --onSuccess 'npm start'",
     "tsc": "tsc",
-    "ts.build": "tsc && copyfiles './src/**/*.json' dist/"
+    "build": "tsc && npm run build.copyfiles",
+    "build.copyfiles": "copyfiles './src/**/*.json' dist/"
   },
   "author": "",
   "license": "ISC"
