--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.46",
+    "@types/node-fetch": "^2.1.1",
     "copyfiles": "^1.2.0",
     "eslint": "^3.7.1",
     "eslint-config-standard": "^6.2.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "ts-node": "^3.3.0",
     "tsc-watch": "^1.0.22",
+    "tslint": "^5.10.0",
     "typescript-eslint-parser": "^8.0.1"
   },
   "config": {
