--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@types/dompurify": "0.0.31",
+    "@types/jsdom": "^11.0.5",
     "@types/lodash": "^4.14.85",
+    "@types/marked": "^0.3.0",
     "@types/morgan": "^1.7.35",
     "@types/parse-link-header": "^1.0.0",
     "@types/winston": "^2.3.7",
