--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/accepts": "^1.3.5",
     "@types/dompurify": "0.0.31",
     "@types/jsdom": "^11.0.5",
     "@types/lodash": "^4.14.85",
     "@types/marked": "^0.3.0",
     "@types/morgan": "^1.7.35",
+    "@types/node-uuid": "0.0.28",
     "@types/parse-link-header": "^1.0.0",
     "@types/winston": "^2.3.7",
     "accepts": "^1.3.3",
