--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     ],
     "sourceMap": true
   },
+  "include": [
+    "src/**/*.ts",
+    "test/**/*.ts",
+    "bin/**/*.ts",
+  ],
   "exclude": [
     "node_modules",
     "dist"
