--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "scripts": {
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'test/**/*.ts' 'bin/**/*.ts'",
     "lint-fix": "tslint --fix -c tslint.json 'src/**/*.ts' 'test/**/*.ts' 'bin/**/*.ts'",
-    "test": "ts-node --harmony test",
+    "test": "ts-node test",
     "start": "node ./dist/bin/server",
     "start-dev": "tsc-watch --onSuccess 'npm start'",
     "tsc": "tsc",
