--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/accepts": "^1.3.5",
     "@types/dompurify": "0.0.31",
+    "@types/highlight.js": "^9.12.3",
     "@types/jsdom": "^11.0.5",
     "@types/lodash": "^4.14.85",
     "@types/marked": "^0.3.0",
@@ -18,6 +19,7 @@
     "@types/winston": "^2.3.7",
     "accepts": "^1.3.3",
     "dompurify": "^0.8.4",
+    "highlight.js": "^9.15.6",
     "jsdom": "^9.9.1",
     "jsonld": "^0.4.11",
     "jsonld-rdfa-parser": "^1.5.1",
