in distbin-nginx-subpath docker, restart distbin on failure

--- a/etc/distbin-nginx-subpath/docker-compose.yml
+++ b/etc/distbin-nginx-subpath/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     volumes:
     - distbin-db:/distbin-db:rw
     # - .:/home/distbin/app
+    restart: on-failure
 
   distbin-subpath:
     depends_on:
